; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-name.c_disambiguate_tree_only.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-name.c_disambiguate_tree_only.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.object_id = type { i32 }

@OBJ_TREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.repository*, %struct.object_id*, i8*)* @disambiguate_tree_only to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @disambiguate_tree_only(%struct.repository* %0, %struct.object_id* %1, i8* %2) #0 {
  %4 = alloca %struct.repository*, align 8
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.repository* %0, %struct.repository** %4, align 8
  store %struct.object_id* %1, %struct.object_id** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.repository*, %struct.repository** %4, align 8
  %9 = load %struct.object_id*, %struct.object_id** %5, align 8
  %10 = call i32 @oid_object_info(%struct.repository* %8, %struct.object_id* %9, i32* null)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @OBJ_TREE, align 4
  %13 = icmp eq i32 %11, %12
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i32 @oid_object_info(%struct.repository*, %struct.object_id*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
